--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,148 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: #000;
+  font-family: Segoe UI;
+  font-style: normal;
+  font-weight: 400;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.Container {
+  width: 1176px;
+  height: 100vh;
+  margin: auto auto;
+}
+.Header {
+  text-align: center;
+  font-size: 35px;
+  font-style: normal;
+  line-height: 47px; 
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+
+.postItem button{
+  width: 119px;
+  margin-left: 737px;
+  border-radius: 10px;
+  background: #064EBC;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
+  border: none;
+  cursor: pointer;
+}
+.postText{
+  color: #FFF;
+  text-align: center;
+  font-family: Segoe UI;
+  font-size: 15px;
+  line-height: normal;
+  padding: 15px 30px;
+}
+
+
+.formGroup{
+  display: flex;
+  gap: 20px;
+ margin-bottom: 52px;
+}
+.searchBar{
+   display: flex;
+  align-items: center;
+  gap: 15px;
+}
+.searchBar input{
+  border-radius: 10px;
+  width: 271px;
+  background: #FFF;
+  box-shadow: 0px 3px 6px 0px rgba(0, 0, 0, 0.16);
+  border: none;
+  outline: none;
+}
+.searchText{
+    padding: 17px 15px 18px 14px;
+}
+.searchText{
+  color: #DFDFDF;
+  font-size: 16px;
+  line-height: 24px;
+  margin-right: 102px;
+}
+.searchText::placeholder{
+  color: #DFDFDF;
+  font-size: 16px;
+  line-height: 24px;
+  margin-right: 102px;
+}
+.searchBar img{
+  position: absolute;
+  margin-left: 266px;
+}
+
+
+.cardsContent{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 88px;
+}
+.Card{
+  width: 310px;
+}
+.userInfo{
+  display: flex;
+  margin-bottom: 15px;
+}
+.userAvatar{
+  margin-right: 15px;
+}
+.inFormation{
+  margin-right: 95px;
+}
+.userName{
+  color: #000;
+  font-size: 17px;
+  line-height: 24px; 
+}
+.Date{
+  color: #5B7083;
+  font-size: 14px;
+  line-height: 22.5px;
+}
+.iconGroup{
+  display: flex;
+  gap: 17px;
+  align-items: start;
+}
+.desScription{
+  font-size: 15px;
+  margin-bottom: 15px;
+}
+
+.notFound{
+  margin-top: 30px;
+  margin-left: 40%;
+  margin-bottom: 20px;
+
+}
+
+.notFoundTitle{
+  color: #064EBC;
+  text-align: center;
+  font-size: 25px;
+  line-height: 25px;
+  margin-bottom: 10px;
+}
+.notFoundSubTitle{
+  color: #000;
+  text-align: center;
+  font-size: 18px;
+  line-height: 25px; /* 138.889% */
 }
