--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,10 @@ code {
   margin-top: 20px;
   margin-bottom: 30px;
 }
+.horizontal-container {
+  display: flex;
+  gap: 10px;
+}
+.hidden-links {
+  display: none;
+}
