--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ code {
 }
 
 
+
 .formGroup{
   display: flex;
   gap: 20px;
@@ -145,4 +146,94 @@ code {
   text-align: center;
   font-size: 18px;
   line-height: 25px; /* 138.889% */
+}
+
+
+.modalContent{
+  padding: 25px 45px;
+}
+
+.Modal{
+  margin: 200px auto;
+  width: 514px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border: 1px solid #D2CBCB;
+  border-radius: 10px;
+  opacity: 1;
+}
+
+
+.modalCard{
+  display: flex;
+  gap: 15px;
+}
+.modalTitle{
+  text-align: center;
+  font: normal normal bold 20px/27px Segoe UI;
+  color: #000000;
+  margin-bottom: 40px;
+}
+.modalAvatar{
+  display: flex;
+  margin-bottom: 20px;
+}
+.modalName{
+  display: flex;
+  margin-bottom: 34px;
+}
+.modalDes{
+  display: flex;
+  margin-bottom: 20px;
+}
+.Title{
+  font: normal normal normal 16px/21px Segoe UI;
+  letter-spacing: 0px;
+  color: #000000;
+}
+.Icon{
+  color: #F3115E;
+}
+.uploadTitle{
+  margin-left: 11px;
+}
+.formUpload{
+  display: flex;
+  gap: 11px;
+  margin-bottom: 20px;
+}
+.formName input ,.formDes input{
+  padding: 0;
+  width: 320px;
+  height: 33px;
+  background: #FFFFFF 0% 0% no-repeat padding-box;
+  border: 1px solid #D9D9D9;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+.Line{
+  border: 1px solid #D9D9D9;
+  margin-bottom: 20px;
+}
+.btnSave{
+  background: #064EBC 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border-radius: 10px;
+  width: 76px;
+}
+.modalButton{
+  display: flex;
+  gap: 20px;
+  justify-content: end;
+}
+.btnTitle{
+  font: normal normal bold 13px/17px Segoe UI;
+  letter-spacing: 0px;
+  color: #FFFFFF;
+  padding: 13px 24px;
+}
+.btnCancel{
+  background: #D9D9D9 0% 0% no-repeat padding-box;
+  box-shadow: 0px 3px 6px #00000029;
+  border-radius: 10px;
 }
