--- a/src/components/ModalComponent/Style.module.css
+++ b/src/components/ModalComponent/Style.module.css
@@ -64,12 +64,13 @@
 .Line {
   border: 1px solid #d9d9d9;
   margin-bottom: 20px;
+  margin-top: 20px;
 }
-.btnSave {
+.btnSave ,.btnDelete{
   background: #064ebc 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 6px #00000029;
   border-radius: 10px;
-  width: 76px;
+  /* width: 76px; */
   cursor: pointer;
 }
 .modalButton {
@@ -84,7 +85,7 @@
   font: normal normal bold 13px/17px "Segoe UI", sans-serif;
   letter-spacing: 0px;
   color: #ffffff;
-  padding: 13px 18px;
+  padding: 13px 13px;
 }
 .btnCancel {
   background: #d9d9d9 0% 0% no-repeat padding-box;
@@ -109,7 +110,4 @@
     font: normal normal normal 16px/21px"Segoe UI", sans-serif;
     letter-spacing: 0px;
     color: #000000;
-}
-.Line{
-    margin-top: 20px;
 }
