Push code detail page jsx v2

--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,8 @@ body {
   margin-top: 20px;
   margin-bottom: 30px;
 }
-.horizontal-container {
-  display: flex;
-  gap: 10px;
+.Link{
+  margin-right: 10px;
 }
 .hidden-links {
   display: none;
